# protocol

./: Cargo.toml  README.md
resolution_protocol/: Cargo.toml
resolution_protocol/src/: constants.rs  lib.rs
resolution_protocol/src/client/: profile.rs
resolution_protocol/src/types/: crypto.rs  encodings.rs  error.rs  mod.rs
scratchpad/: Cargo.toml
scratchpad/src/: main.rs
specification/: MESSAGES.md  SPEC.md
