[package]
name = "resolution_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std", "stream"] }
anyhow = "1.0.98"
base64 = "0.22.1"
const_format = { version = "0.2.34", features = ["all"] }
crc = "3.3.0"
derive_builder = "0.20.2"
generic-array = { version = "1.2.0", features = ["serde", "zeroize"] }
iroh = { version = "0.35.0", features = ["discovery-local-network", "discovery-pkarr-dht"] }
log = { version = "0.4.27", features = ["kv_serde", "serde", "std"] }
oqs = { version = "0.11.0", features = ["vendored", "serde"] }
regex = "1.11.1"
rmp = "0.8.14"
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["serde", "serde_bytes", "with-serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["base64"] }
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["serde", "v4", "fast-rng"] }
